server/dev_out2.txt
C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/config/prisma.ts(11,5): error TS2353: Object literal may only specify known properties, and 'datasourceUrl' does not exist in type 'Subset<PrismaClientOptions, PrismaClientOptions>'.

    at createTSError (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1699:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2353 ]
}
